--- a/DashboardNuman/dashboard.html
+++ b/DashboardNuman/dashboard.html
@@ -7,6 +7,7 @@
     <title>IoT-based Urban Gardening 11</title>
     <!-- MATERIAL CDN -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Sharp" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" rel="stylesheet">
     <!-- STYLESHEET -->
     <link rel="stylesheet" href="./style.css">
 </head>
@@ -14,25 +15,19 @@
     <div class="container">
         <aside id="sidebar">
             <div class="top">
-                <div class="logo">
+                <div class="logo" id="toggle-btn">
                     <img src="/DashboardNuman/Source/leaves.png" alt="Logo"> 
                     <h2>Urban Gardening</h2>
                 </div>
-                <div class="close" id="close-btn">
-                    <span class="material-icons-sharp">close</span>
-                </div>
             </div>
-
             <div class="sidebar">
                 <!-- we want to integrate weather information in this sidebar -->
                 <h3>Weather Forecast</h3>
                 <p class="weather">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam. 
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.
                 </p>
-                
                 <!-- warning section -->
                 <h3>Warning !</h3>
                 <p class="warning">
@@ -41,6 +36,44 @@
                 </p>
             </div>
         </aside>
+        <main>
+            <header>
+                <div class="alert">
+                    <h3>Warning :</h3>
+                    <p>The temperature is low!</p>
+                    <span class="material-symbols-outlined" id="close-alert">more_horiz</span>
+                </div>
+                <span class="material-symbols-outlined" id="open-alert" style="display:none;">more_horiz</span>
+            </header>
+
+            <h2>IoT-based</h2>
+            <h2>Urban Gardening</h2>
+
+            <div class="dashboard">
+                <div class="card-big">
+                    <h3>Plant General Knowledge</h3>
+                </div>
+                <div class="card">
+                    <h3>Visible</h3>
+                    <p>100 Lm</p>
+                </div>
+                <div class="card">
+                    <h3>UV</h3>
+                </div>
+                <div class="card">
+                    <h3>IR</h3>
+                </div>
+                <div class="card">
+                    <h3>Humidity</h3>
+                </div>
+                <div class="card">
+                    <h3>Moisture</h3>
+                </div>
+                <div class="card">
+                    <h3>Temperature</h3>
+                </div>
+            </div>
+        </main>
     </div>
     <!-- JAVASCRIPT -->
     <script src="./script.js"></script>
